# rdot

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
examples/: config.toml
examples/git/: Dotfile
examples/guix/: Dotfile
examples/rtx/: Dotfile  config.toml
examples/starship/: Dotfile
src/: dirs.rs  env.rs  lib.rs  main.rs
src/cli/: command.rs  list.rs  mod.rs  options.rs  output.rs
src/cli/commands/: init.rs  install.rs  list.rs  mod.rs  remove.rs
src/config/: dirs.rs  env.rs  init.rs  loader.rs  mod.rs  os.rs  package.rs
src/core/: config.rs  dirs.rs  mod.rs  role.rs
src/line/: mod.rs
src/link/: mod.rs
src/package/: config.rs  line.rs  link.rs  mod.rs
src/role/: action.rs  config.rs  line.rs  link.rs  mod.rs  system.rs
src/rtx/: mod.rs
src/system/: mod.rs
tests/: cli.rs  integration.rs
