[package]
name = "rdot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive", "env", "string"] }
color-eyre = "0.6"
console = "0.15.7"
dialoguer = "0.10.4"
dirs-next = "2.0.0"
indicatif = "0.17.6"
lazy_static = "1.4.0"
log = "0.4.20"
schemars = "0.8.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
shellexpand = "3.1.0"
toml = "0.7.8"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color"] }
env_logger = "0.10.0"
predicates = "3.0.3"
