[package]
name = "rdot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["cargo", "derive", "env", "string"] }
color-eyre = "0.6"
console = "0.15.8"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
indicatif = "0.17.7"
lazy_static = "1.4.0"
log = "0.4.20"
schemars = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
shellexpand = "3.1.0"
toml = "0.8.8"

[dev-dependencies]
assert_cmd = { version = "2.0.13", features = ["color"] }
env_logger = "0.10.2"
predicates = "3.1.0"
